css/style.css
/* ===== Primary Styles =======


/* 
* Layout
*******************/
::selection {color:#000;background:rgba(255,255,255,.2);}
::-moz-selection {color:#000;background:rgba(255,255,255,.2);}

body{font-family: 'ff-tisa-sans-web-pro', Helvetica, serif;color:#fff;padding-top:12%;text-align:center;}

.headline{font-size: 4.2vw;margin: 0 auto;box-sizing: border-box;padding: 27px 0;width: 80%;background-color: rgba(255,255,255,.2);}

.main-description{font-size: 1.75vw;margin: 35px auto 70px;width: 60%;}
.main-description a{color:#fff;}
.main-description a:hover{color:#404d5b;}

.social-btns{margin: 0 auto;display: block;float: none;height: 50px;width: 210px;}
.social-btns a{position:relative;background: url('../images/socl-sprite.png') no-repeat center;width: 50px;height:50px;float:left;border:2px solid #fff;border-radius: 50%;background-size: 200px;margin-right: 30px;}
.social-btns a:last-child{margin-right:0;}
.social-btns a .extra-border{position:absolute;left: -2px;top: -2px;width: 50px;height: 50px;border-radius: 50%;float: left;border: 2px solid #fff;}
.social-btns a:hover{background-color: rgba(0,0,0,.3)}
.social-btns a:hover .extra-border{left: -10px;top: -10px;width: 65px;height: 65px;}
.social-btns .gh-ico{background-position: 8px 11px;}
.social-btns .tw-ico{background-position: -78px 12px;}
.social-btns .mb-ico{background-position: -163px 9px;}

.hipo-logo{background: url('../images/hipo.png') no-repeat center;background-size: 65px;width: 65px;height: 50px;margin: 15% auto 8%;display: block;}

/* 
* Transitions
*******************/
.social-btns a, .social-btns a .extra-border{
	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
	transition: all .3s ease;
}
.main-description a{
	-webkit-transition: all .7s ease;
	-moz-transition: all .7s ease;
	-ms-transition: all .7s ease;
	-o-transition: all .7s ease;
	transition: all .7s ease;
}


/* 
* Curtain Link Effect
*******************/
.link-curtain a {overflow: hidden;font-weight: 500;}

.link-curtain a::before,
.link-curtain a::after {position: absolute;top: 0;left: 0;width: 100%;height: 100%;content: '';-webkit-transition: -webkit-transform 0.3s;transition: transform 0.3s;}

.link-curtain a::before {border-top: 2px solid #fff;background: transparent;-webkit-transition-delay: 0.3s;transition-delay: 0.3s;-webkit-transform: translateY( calc(100% - 2px) );transform: translateY( calc(100% - 2px) );}

.link-curtain a:hover::before,
.link-curtain a:focus::before {-webkit-transition-delay: 0s;transition-delay: 0s;}

.link-curtain a:hover::before,
.link-curtain a:focus::before,
.link-curtain a:hover::after,
.link-curtain a:focus::after {-webkit-transform: translateX(0);transform: translateX(0);}

.link-curtain a::after {z-index: -1;background: rgba(255,255,255,0.7);-webkit-transform: translateY(-100%);transform: translateY(-100%);}

.link-curtain a:hover::after,
.link-curtain a:focus::after {-webkit-transition-delay: 0.3s;transition-delay: 0.3s;}

section .main-description a {position: relative;display: inline-block;outline: none;vertical-align: bottom;text-decoration: none;white-space: nowrap;}
section .main-description a::before,
section .main-description a::after {pointer-events: none;;backface-visibility: hidden;-webkit-font-smoothing: antialiased;font-smoothing: antialiased;}


/* 
* Media Queries
*******************/

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (min-width : 320px) and (max-width : 480px) {
	.headline{font-size: 6.2vw;width: 91%;}
	.main-description{font-size: 6.2vw;width: 90%;}
}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-width : 481px) and (max-width : 767px) {
	.headline{font-size: 6.2vw;width: 91%;}
	.main-description{font-size: 4.2vw;width: 90%;}
}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-width : 768px) and (max-width : 1024px) {
	.headline{}
	.main-description{font-size: 3.2vw;width: 71%;}
}

/* Desktops and laptops ----------- */
@media only screen and (min-width : 1224px) {

}

/* Large screens ----------- */
@media only screen and (min-width : 1824px) {

}

